# Personal-website

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  ci_test.bash  index.html  styles.css
.github/workflows/: ci.yml  release.yml
hosting/: docker-compose.yml  nginx.conf
src/: main.rs  routes.rs
src/components/: footer.rs  mod.rs  navbar.rs
src/pages/: contact.rs  home.rs  mod.rs  not_found.rs  projects.rs
src/projects/: mod.rs
src/projects/car_mpc/: content.md  metadata.json  mod.rs
src/projects/control_systems_torbox/: content.md  metadata.json
src/projects/website/: content.md  metadata.json  mod.rs
