[package]
name = "rust_homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version = "^0.21", features = ["csr"]}
plotters = { version = "0.3", features = ["svg_backend"] }
plotters-canvas = "0.3"
web-sys = {version = "0.3", features = ["HtmlCanvasElement"]}
yew-router = "0.18"
chrono = "0.4"
log = "0.4"
console_log = "0.2"
pulldown-cmark = "0.12"
serde_json = "1.0"
serde = "1.0"
gloo-storage = "0.3.0"